# openbrain

./: .dockerignore  .env  .env.example  .gitignore  Dockerfile  README.md  SPEC.md  docker-compose.yml  pyproject.toml  requirements.txt
config/: settings.yaml
docs/: SECURITY.md
docs/specs/: 2026-03-13-dashboard-implementation-plan.md  2026-03-13-dashboard-redesign.md
scripts/: backup.sh  check_db.py  healthcheck.sh  import_sample.py  remember.sh  setup_db.py  startup.sh
src/: __init__.py  main.py
src/analytics/: trends.py  weekly_report.py
src/api/: __init__.py  main.py
src/cli/: __init__.py  __main__.py  exec_command.py  import_data.py  report.py  search.py  serve.py  stats.py  store.py
src/connectors/: __init__.py  claude_code.py  file_watcher.py  gmail.py  telegram.py  whatsapp.py
src/db/: connection.py  queries.py  schema.sql
src/embedder/: __init__.py
src/extractors/: entities.py  tagger.py
src/ingestion/: importer.py
src/notifications/: __init__.py  email_notifier.py  telegram_bot.py
src/sandbox/: README.md  __init__.py  docker_sandbox.py
src/setup/: __init__.py
tests/: test_core.py
ui/: dashboard.py
web/: Dockerfile  README.md  package-lock.json  package.json
web/src/app/: globals.css  layout.tsx
web/src/app/(dashboard)/: layout.tsx  page.tsx
web/src/app/(dashboard)/entities/: page.tsx
web/src/app/(dashboard)/graph/: page.tsx
web/src/components/: knowledge-graph.tsx  memory-card.tsx  memory-detail.tsx  quick-capture.tsx  sidebar.tsx
web/src/lib/: api.ts  providers.tsx
web/src/types/: cytoscape-cose-bilkent.d.ts
(+3 files in other folders)
