[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openbrain"
version = "0.1.0"
description = "Standalone personal memory management system with semantic search"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Tom", email = "tom@example.com"}
]
keywords = ["memory", "embeddings", "semantic-search", "ai", "postgres", "pgvector"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "psycopg2-binary>=2.9.9",
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.29.0",
    "pgvector>=0.2.0",
    "pyyaml>=6.0.1",
    "python-dotenv>=1.0.0",
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "streamlit>=1.31.0",
    "pandas>=2.2.0",
    "matplotlib>=3.8.0",
    "requests>=2.31.0",
    "httpx>=0.26.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "black>=24.1.0",
    "ruff>=0.2.0",
]

[project.scripts]
openbrain = "src.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "config*", "ui*", "scripts*"]

[tool.setuptools.package-data]
config = ["*.yaml", "*.yml"]
